/*
Copyright 2020 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
//
syntax = "proto3";

package magma.migration.orc8r;
option go_package = "types";

message OldMagmadGatewayConfig {
    int32 checkin_interval = 1;
    int32 checkin_timeout = 2;
    bool autoupgrade_enabled = 3;
    int32 autoupgrade_poll_interval = 4;
    string tier = 5;

    map<string, bool> feature_flags = 6;
    repeated string dynamic_services = 7;
}
